Fix scrollbar issue; Enlarge chat-input area for desktop and laptop with responsivity

--- a/agrichat-frontend/style.css
+++ b/agrichat-frontend/style.css
@@ -113,7 +113,8 @@ body.sidebar-collapsed {
 }
 
 .sessions-container {
-  height: calc(100vh - 140px);
+  /* height: calc(100vh - 140px); */
+  height: calc(100vh - 240px);
   overflow-y: auto;
   padding: 20px;
 }
@@ -271,8 +272,6 @@ body.sidebar-collapsed {
 
 .main-header {
   position: fixed;
-  width: 100vw;
-  max-width: 100vw;
   z-index: 100;
 
   background: var(--white);
@@ -282,6 +281,10 @@ body.sidebar-collapsed {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2px 10px var(--shadow);
+
+  /* To make scrollbar visible */
+  width: calc(100vw - 14px);
+  max-width: calc(100vw - 14px);
 }
 
 .header-left {
@@ -584,7 +587,7 @@ body.sidebar-collapsed {
   bottom: 0;
   z-index: 1000;
   border-radius: 0;
-  margin: 0;
+  margin: 50px 0 0 0;
   /* background-color: #e0fde0; */
   background-color: #E8FFD7;
 
@@ -604,7 +607,8 @@ body.sidebar-collapsed {
   left: 0;
   box-sizing: border-box;
 
-  margin-top: 50px;
+  width: calc(100vw - 17px);
+  max-width: calc(100vw - 17px);
 }
 
 #user-input {
@@ -1254,7 +1258,7 @@ select option:checked {
   }
 
   #chat-form textarea {
-    margin: 0px 10px 0 23% !important;
+    margin: 0px 10px 0 15% !important;
   }
 
 }
